--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-	<head>
-		<meta charset="utf-8">
-		<title>planets of the universe</title>
-	</head>
-	<body>
+---
+layout: default
+---
 		<h1>Planets of the universe</h1>
-	</body>
-</html>
+		<p> lots of planets int the univ</p>
+	
